namespace Assets.Scripts.Constants
{
    public static class EnemyAnimatorConstants
    {
        public const string AttackParameter = "Attack";
        public const string IsDeadParameter = "IsDead";
        public const string IsRunningParameter = "IsRunning";
        public const string IsWalkingParameter = "IsWalking";
    }
}
